# OpenClaw-On-Pi

./: .gitignore  LICENSE  README.md  install.py  openclaw  pyproject.toml  restart  setup  start  stop
config/: .env.template  config.yaml  permissions.yaml  providers.yaml  skills.yaml
scripts/: .gitkeep  clone.py  migrate.py
src/: __init__.py  cli.py  main.py
src/bot/: __init__.py  command_router.py  telegram_handler.py
src/llm/: __init__.py  base_provider.py  groq_provider.py  ollama_cloud_provider.py  ollama_local_provider.py  provider_manager.py  rate_limiter.py
src/security/: __init__.py  auth.py
src/skills/: __init__.py  base_skill.py  calc.py  crypto.py  news.py  ocr.py  python_runner.py  reddit.py  registry.py  sysinfo.py  transcribe.py  translate.py  tts.py  weather.py  wiki.py  ytdl.py
src/utils/: __init__.py  audit_logger.py  config_manager.py  context_store.py
src/web/: __init__.py  dashboard.py
tests/: __init__.py
tests/integration/: __init__.py  test_bot_startup.py
tests/property/: __init__.py  test_audit_properties.py  test_auth_properties.py  test_clone_properties.py  test_command_properties.py  test_config_properties.py  test_context_properties.py  test_migration_properties.py  test_provider_properties.py  test_rate_limiter_properties.py
tests/unit/: __init__.py  test_calc_skill.py  test_clone.py  test_dashboard_endpoints.py  test_message_feed.py  test_migrate.py  test_model_selection.py  test_python_runner_skill.py  test_sysinfo_skill.py  test_weather_skill.py
